feat: client/server first implementation

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,75 @@
 /Client/obj/rpg-base-template-client.csproj.nuget.g.targets
 /.vscode/launch.json
 /.vscode/tasks.json
+/Client/bin/Debug/net5.0/Raylib-cs.dll
+/Client/bin/Debug/net5.0/runtimes/linux-x64/native/libraylib.so
+/Client/bin/Debug/net5.0/runtimes/osx-x64/native/libraylib.dylib
+/Client/bin/Debug/net5.0/runtimes/win-x64/native/raylib.dll
+/Client/bin/Debug/net5.0/runtimes/win-x86/native/raylib.dll
+/Client/Adventure/
+/Client/System/Audio/buttonfx.wav
+/Client/System/Images/Button1.png
+/Client/bin/Debug/net5.0.rar
+/Client/bin/Debug/net5.0/Adventure/16x16_DungeonTileset.json
+/Client/bin/Debug/net5.0/Adventure/433px-TUX_G2.svg.png
+/Client/bin/Debug/net5.0/Adventure/map.json
+/Client/bin/Debug/net5.0/Adventure/scarfy.png
+/Client/bin/Debug/net5.0/System/Audio/buttonfx.wav
+/Client/bin/Debug/net5.0/System/Images/Button1.png
+/Client/bin/Release/net5.0/Newtonsoft.Json.dll
+/Client/bin/Release/net5.0/NihilNetwork.dll
+/Client/bin/Release/net5.0/NihilNetwork.pdb
+/Client/bin/Release/net5.0/Raylib-cs.dll
+/Client/bin/Release/net5.0/ref/rpg-base-template-client.dll
+/Client/bin/Release/net5.0/rpg-base-template-client.deps.json
+/Client/bin/Release/net5.0/rpg-base-template-client.dll
+/Client/bin/Release/net5.0/rpg-base-template-client.exe
+/Client/bin/Release/net5.0/rpg-base-template-client.pdb
+/Client/bin/Release/net5.0/rpg-base-template-client.runtimeconfig.dev.json
+/Client/bin/Release/net5.0/rpg-base-template-client.runtimeconfig.json
+/Client/bin/Release/net5.0/runtimes/linux-x64/native/libraylib.so
+/Client/bin/Release/net5.0/runtimes/osx-x64/native/libraylib.dylib
+/Client/bin/Release/net5.0/runtimes/win-x64/native/raylib.dll
+/Client/bin/Release/net5.0/runtimes/win-x86/native/raylib.dll
+/Client/obj/Debug/net5.0/linux-x64/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+/Client/obj/Debug/net5.0/linux-x64/apphost
+/Client/obj/Debug/net5.0/linux-x64/ref/rpg-base-template-client.dll
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.AssemblyInfo.cs
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.AssemblyInfoInputs.cache
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.GeneratedMSBuildEditorConfig.editorconfig
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.assets.cache
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.csproj.AssemblyReference.cache
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.csproj.CopyComplete
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.csproj.CoreCompileInputs.cache
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.csproj.FileListAbsolute.txt
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.dll
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.genruntimeconfig.cache
+/Client/obj/Debug/net5.0/linux-x64/rpg-base-template-client.pdb
+/Client/obj/Release/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+/Client/obj/Release/net5.0/apphost.exe
+/Client/obj/Release/net5.0/ref/rpg-base-template-client.dll
+/Client/obj/Release/net5.0/rpg-base-template-client.AssemblyInfo.cs
+/Client/obj/Release/net5.0/rpg-base-template-client.AssemblyInfoInputs.cache
+/Client/obj/Release/net5.0/rpg-base-template-client.GeneratedMSBuildEditorConfig.editorconfig
+/Client/obj/Release/net5.0/rpg-base-template-client.assets.cache
+/Client/obj/Release/net5.0/rpg-base-template-client.csproj.AssemblyReference.cache
+/Client/obj/Release/net5.0/rpg-base-template-client.csproj.CopyComplete
+/Client/obj/Release/net5.0/rpg-base-template-client.csproj.CoreCompileInputs.cache
+/Client/obj/Release/net5.0/rpg-base-template-client.csproj.FileListAbsolute.txt
+/Client/obj/Release/net5.0/rpg-base-template-client.dll
+/Client/obj/Release/net5.0/rpg-base-template-client.genruntimeconfig.cache
+/Client/obj/Release/net5.0/rpg-base-template-client.pdb
+/Server/obj/Release/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+/Server/obj/Release/net5.0/apphost.exe
+/Server/obj/Release/net5.0/ref/rpg-base-template-server.dll
+/Server/obj/Release/net5.0/rpg-base-template-server.AssemblyInfo.cs
+/Server/obj/Release/net5.0/rpg-base-template-server.AssemblyInfoInputs.cache
+/Server/obj/Release/net5.0/rpg-base-template-server.GeneratedMSBuildEditorConfig.editorconfig
+/Server/obj/Release/net5.0/rpg-base-template-server.assets.cache
+/Server/obj/Release/net5.0/rpg-base-template-server.csproj.AssemblyReference.cache
+/Server/obj/Release/net5.0/rpg-base-template-server.csproj.CopyComplete
+/Server/obj/Release/net5.0/rpg-base-template-server.csproj.CoreCompileInputs.cache
+/Server/obj/Release/net5.0/rpg-base-template-server.csproj.FileListAbsolute.txt
+/Server/obj/Release/net5.0/rpg-base-template-server.dll
+/Server/obj/Release/net5.0/rpg-base-template-server.genruntimeconfig.cache
+/Server/obj/Release/net5.0/rpg-base-template-server.pdb
