--- a/Client/rpg-base-template-client.csproj
+++ b/Client/rpg-base-template-client.csproj
@@ -9,4 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\lib\NihilNetwork\NihilNetwork\NihilNetwork.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Raylib-cs" Version="3.7.0.1" />
+  </ItemGroup>
 </Project>
